ADDED: client docker and containerd

--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start:dev": "webpack-dev-server",
+    "start": "webpack-dev-server",
     "build": "webpack -p"
   },
   "dependencies": {
