--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "node": "8.10.0"
   },
   "scripts": {
-    "start:dev": "nodemon server.js",
+    "start:dev": "export MONGODB_URI=mongodb://localhost:27017/ && export SESSION_SECRET=HUSHUSH && export NODE_ENV=production && nodemon server.js",
     "start:client": "npm run start:dev --prefix client",
     "start:dev-full": "concurrently \"npm run start:dev\" \"npm run start:client\"",
     "install:client": "npm install --prefix client",
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "concurrently": "^3.5.1",
+    "cors": "^2.8.5",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "mongoose": "^5.5.12",
